[package]
name = "jd4_5"
version = "4.5.0"
authors = ["iceboy"]

[dependencies]
bincode = "0.9.2"
byteorder = "1.2.1"
futures = "0.1.17"
nix = "0.9.0"
serde = "1.0.24"
serde_derive = "1.0.24"
tokio-core = "0.1.10"
tokio-io = "0.1.4"
tokio-serde-bincode = { git = "https://github.com/alexcrichton/tokio-serde-bincode.git" }
tokio-uds = "0.1.7"
